Se añdio cambio a la line images

--- a/deployment-billing-app-back-jenkins.yaml
+++ b/deployment-billing-app-back-jenkins.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: billing-app-back-jenkis
-          image: .......       
+          image: miguelbazan/app_facturacion       
           ports:
             - containerPort: 7280
               name: billingappbport
